Fix z-index value in main-header style

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ a:hover{
     position:fixed;
     border-bottom:3px solid #d57146;
     top:0;
-    z-index:1"
+    z-index:1
 }
 
 
